# jobsy-backend

./: .env.template  .gitignore  README.md  pyproject.toml
docs/: PRODUCT_BRIEF.md
src/: theirstack_api.py
src/agents/cover_letter_agent/: agent.py  instructions.py
src/agents/job_matcher_agent/: agent.py  instructions.py
src/apis/: cover_letter.py  jobs.py
src/db/: client.py
src/models/: job.py  saved_jobs.py  user_preferences.py
src/repositories/: job.py
src/services/: job.py
src/tests/mock_data/: search_jobs_1.json  search_jobs_2.json
