[project]
name = "jobsy-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "openai-agents>=0.3.0",
    "supabase>=2.18.1",
    "python-dotenv>=1.0.0",
    "black>=25.1.0",
]

[tool.uv.workspace]
members = [
    "test",
]
